--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "Url Shortener Backend",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "author": "Thiago Baptista",
   "license": "ISC",
   "dependencies": {
     "express": "4.15.3"
+  },
+  "devDependencies": {
+    "nodemon": "1.11.0"
   }
 }
