--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "author": "Thiago Baptista",
   "license": "ISC",
   "dependencies": {
-    "express": "4.15.3"
+    "express": "4.15.3",
+    "firebase": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "1.11.0"
