--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "author": "Thiago Baptista",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "encodeurl": "^1.0.1",
     "express": "4.15.3",
     "firebase": "^4.1.2"
   },
